# VoukoderPro

./: .gitignore  CMakeLists.txt  README.md  VoukoderPro.sln  fugue.qrc  vcpkg.json
.github/workflows/: build.yml  designer-build.yml  voukoder-dll-build.yml
AppPlugins/: CMakeLists.txt
AppPlugins/AfterEffectsPlugin/: AfterEffectsPlugin.cpp  AfterEffectsPlugin.h  AfterEffectsPlugin.vcxproj  AfterEffectsPlugin.vcxproj.filters  AfterEffectsPlugin_PiPL.r  AfterEffectsPlugin_PiPL.rc  Common.h  deploy.bat  httplib.hpp
AppPlugins/AfterEffectsPlugin/aftereffects_cc2015/Examples/: BuildAll.sln
AppPlugins/DaVinciResolvePlugin/: CMakeLists.txt  DaVinciResolvePlugin.vcxproj  DaVinciResolvePlugin.vcxproj.filters  plugin.cpp  plugin.h  utils.h  video_encoder.cpp  video_encoder.h  voukoder_container.cpp  voukoder_container.h  voukoderpro.hpp
AppPlugins/DaVinciResolvePlugin/ioplugin_sdk/: IOPluginProps.h
AppPlugins/PremiereCCPlugin/: .gitignore  PremiereCCPlugin.rc  PremiereCCPlugin.sln  PremiereCCPlugin.vcxproj  PremiereCCPlugin.vcxproj.filters  README.md  plugin.cpp  plugin.cpp.vpl  plugin.h  suites.h  version.h
AppPlugins/PremiereCCPlugin/Premiere Pro 22.0 C++ SDK/Examples/Projects/ControlSurface/: ControlSurface.sln  ControlSurface.vcxproj
AppPlugins/PremiereCCPlugin/Premiere Pro 22.0 C++ SDK/Examples/Projects/Device/: Device_Control.vcxproj
AppPlugins/PremiereCCPlugin/Premiere Pro 22.0 C++ SDK/Examples/Projects/ExportController/: ExportController.vcxproj
AppPlugins/PremiereCCPlugin/Premiere Pro 22.0 C++ SDK/Examples/Utils/: SDK_File.h
Designer/: BUILDING  BuildNodeEditor2.patch  CMakeLists.txt  CMakePresets.json  Designer.pro  Designer.pro.user.c343190  Designer_en_US.ts  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  designer.qrc  designer_types.h  fugue.qrc  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newsdialog.cpp  newsdialog.h  newsdialog.ui  performancetestdialog.cpp  performancetestdialog.h  performancetestdialog.ui  preferences.cpp  preferences.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  qtpropertybrowser.pri  sceneopendialog.cpp  sceneopendialog.h  sceneopendialog.ui  scenesavedialog.cpp  scenesavedialog.h  scenesavedialog.ui  sceneselectdialog.cpp  sceneselectdialog.h  sceneselectdialog.ui  supportdialog.cpp  (+6 more)
Designer/components/SceneEditor/: sceneeditorscene.cpp  sceneeditorscene.h  sceneeditorview.cpp  sceneeditorview.h
Designer/components/SceneEditor/nodes/: sceneeditorencodernodemodel.cpp  sceneeditorencodernodemodel.h  sceneeditorfilternodemodel.cpp  sceneeditorfilternodemodel.h  sceneeditorinputnodemodel.cpp  sceneeditorinputnodemodel.h  sceneeditormuxernodemodel.cpp  sceneeditormuxernodemodel.h  sceneeditornodedata.h  sceneeditornodemodel.cpp  sceneeditornodemodel.h  sceneeditoroutputnodemodel.cpp  sceneeditoroutputnodemodel.h  sceneeditorpostprocnodemodel.cpp  sceneeditorpostprocnodemodel.h
Designer/components/SceneEditor/nodes/ui/: encoderpropertiesdialog.cpp  encoderpropertiesdialog.h  filterpropertiesdialog.cpp  filterpropertiesdialog.h  inputpropertiesdialog.cpp  inputpropertiesdialog.h  inputpropertiesdialog.ui  muxerpropertiesdialog.cpp  muxerpropertiesdialog.h  outputpropertiesdialog.cpp  outputpropertiesdialog.h  postprocpropertiesdialog.cpp  postprocpropertiesdialog.h  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
Designer/components/Test/: addeditaudiotrackdialog.cpp  addeditaudiotrackdialog.h  addeditaudiotrackdialog.ui  addeditvideotrackdialog.cpp  addeditvideotrackdialog.h  addeditvideotrackdialog.ui  performancetestdialog.cpp  performancetestdialog.h  performancetestdialog.ui  scenetestdialog.cpp  scenetestdialog.h  scenetestdialog.ui
Designer/resource/: fugue.qrc
Installer/: Installer.wixproj  LICENSE.rtf  Product.wxs  Version.wxi  VoukoderProVEGAS15-x64.fio2007-config  VoukoderProVEGAS16-x64.fio2007-config  VoukoderProVEGAS17-x64.fio2007-config  VoukoderProVEGAS18-x64.fio2007-config  VoukoderProVEGAS19-x64.fio2007-config  VoukoderProVEGAS20-x64.fio2007-config  VoukoderProVEGAS21-x64.fio2007-config  VoukoderProVEGAS22-x64.fio2007-config
PluginInterface/: PluginInterface.vcxproj  PluginInterface.vcxproj.filters  plugin_api.h  properties.h
Test/: Test.cpp  Test.h  Test.vcxproj
VoukoderPro/: Assets.cpp  Assets.h  BaseNode.h  CMakeLists.txt  EncoderNode.cpp  EncoderNode.h  Errors.h  FilterNode.cpp  FilterNode.h  InputNode.cpp  InputNode.h  JavaScript.cpp  JavaScript.h  Logger.h  MuxerNode.cpp  MuxerNode.h  OutputNode.cpp  OutputNode.h  Performance.cpp  Performance.h  PerformanceManager.cpp  PerformanceManager.h  PostProcNode.cpp  PostProcNode.h  Router.cpp  Router.h  SceneManager.cpp  SceneManager.h  System.h  Telemetry.cpp  Telemetry.h  TelemetryLinux.cpp  TelemetryWindows.cpp  Version.h  VoukoderPro.vcxproj  VoukoderPro.vcxproj.filters  ffmpeg.h  json-root-schema.h  post_build_win32.bat  types.h  (+5 more)
VoukoderProPlugins/AMFEncodersPlugin/: AMFEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/BasePostProcPlugin/: BasePostProcPlugin.vcxproj  FFmpegOutputPlugin.vcxproj.filters  plugin.cpp  plugin.h
VoukoderProPlugins/FFmpegEncodersPlugin/: CMakeLists.txt  FFmpegEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/FFmpegFiltersPlugin/: FFmpegFiltersPlugin.vcxproj  FFmpegFiltersPlugin.vcxproj.filters  plugin.cpp  plugin.h
VoukoderProPlugins/FFmpegMuxersPlugin/: FFmpegMuxersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/FFmpegOutputPlugin/: FFmpegOutputPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/LAMEEncodersPlugin/: LAMEEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/NVENCEncodersPlugin/: NVENCEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/QSVEncodersPlugin/: QSVEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/SVTEncodersPlugin/: SVTEncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/X264EncodersPlugin/: X264EncodersPlugin.vcxproj  plugin.cpp  plugin.h
VoukoderProPlugins/XiphEncodersPlugin/: XiphEncodersPlugin.vcxproj  plugin.cpp  plugin.h
(+38 files in other folders)
